# istockpick

./: .gitignore  README.md  SKILL.md
backend/: pyproject.toml  requirements.txt  server.py
backend/stock_analyst/: api.py  config.py  congress.py  crypto.py  fundamental.py  futures.py  market_data.py  options.py  qlib_engine.py  technical.py  web_analyzer.py
frontend/: index.html
